deploy/gcp/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aqi-app
  labels:
    app: aqi-monitoring
    environment: production
